# django-admin-inline-paginator-plus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  tox.ini
.github/.github/: PULL_REQUEST_TEMPLATE.md
django_admin_inline_paginator_plus/: admin.py  apps.py
django_admin_inline_paginator_plus/static/django_admin_inline_paginator_plus/: paginator.css
django_admin_inline_paginator_plus/templates/admin/: paginated_base.html  stacked_paginated.html  stacked_paginator.html  tabular_paginated.html  tabular_paginator.html
django_admin_inline_paginator_plus/templatetags/: paginated_inline.py
example/: makefile  manage.py  requirements.txt
example/app/example/: admin.py  models.py
example/app/example/migrations/: 0001_initial.py
example/conf/: settings.py  urls.py
example/fixtures/: bkp.json
tests/: __init__.py  admin_unit_test.py  apps_test.py
